<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/timesheet_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".ui.TimesheetDetailFragment">

        <TextView
            android:id="@+id/week_commencing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Week Commencing"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/week_commence_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:gravity="center"
            android:hint="Set date"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/days_of_week_text_size"
            android:transitionName="date_transition"
            app:layout_constraintStart_toStartOf="@+id/week_commencing_title"
            app:layout_constraintTop_toBottomOf="@+id/week_commencing_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Monday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/monday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Tuesday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/tuesday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Wednesday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/wednesday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Thursday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/thursday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Friday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/friday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Saturday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/saturday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="Sunday"
                android:textColor="#000"
                android:textSize="@dimen/days_of_week_text_size" />

            <EditText
                android:id="@+id/sunday_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@android:color/transparent"
                android:hint="Set"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/days_of_week_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary">

        </View>

        <TextView
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:drawableBottom="@drawable/ic_download"
            android:drawableTint="@color/colorPrimary"
            android:text="Download"
            android:textColor="@android:color/black"
            android:textSize="16dp"
            android:visibility="gone" />

        <android.support.v7.widget.CardView
            android:id="@+id/send_button"
            android:layout_width="140dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_height"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/button_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/send_button_tv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="Send"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/detail_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
