<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="pin"
        app:titleTextColor="@android:color/white" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hint_white">

                    <EditText
                        android:id="@+id/company_name_edit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_name"
                        android:drawablePadding="@dimen/icon_padding"
                        android:drawableTint="@android:color/white"
                        android:hint="@string/company_name"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hint_white">

                    <EditText
                        android:id="@+id/manager_name_edit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:drawableStart="@drawable/ic_name"
                        android:drawablePadding="@dimen/icon_padding"
                        android:drawableTint="@android:color/white"
                        android:hint="@string/manager_name"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hint_white">

                    <EditText
                        android:id="@+id/manager_email_edit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/icon_padding"
                        android:drawableTint="@android:color/white"
                        android:hint="@string/manager_email"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/default_hours_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@color/hint_white">

                    <EditText
                        android:id="@+id/default_hours_edit"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:drawableStart="@drawable/ic_hours"
                        android:drawablePadding="@dimen/icon_padding"
                        android:drawableTint="@android:color/white"
                        android:hint="@string/default_daily_hours"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textIsSelectable="false" />

                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/default_days_edit"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="8dp"
                    android:drawableTint="@android:color/white"
                    android:gravity="center|left"
                    android:hint="@string/default_days"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/hint_white"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:layout_width="242dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="24dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/start_date_edit"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="8dp"
                    android:drawableTint="@android:color/white"
                    android:gravity="center_vertical"
                    android:hint="@string/start_date"
                    android:textColorHint="@color/hint_white"
                    android:textColor="@android:color/white"
                    android:inputType="none"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1">

                </TextView>

                <View
                    android:layout_width="242dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/black" />


                <android.support.v7.widget.CardView
                    android:id="@+id/create_contract_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="40dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="@dimen/button_corner_radius"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/default_hours_edit">

                    <TextView
                        android:id="@+id/create_contract_button_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/create_contract"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
